--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/bounky-logo.svg" />
+    <link rel="icon" type="image/svg+xml" href="/bounky-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bounky - Plataforma de Treinamento Aeronáutico</title>
   </head>
